--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet": "^3.2.2",
     "react-responsive-grid": "^0.3.3",
     "react-typography": "^0.15.0",
+    "striptags": "^3.0.1",
     "typography": "^0.15.0",
     "typography-theme-wordpress-2016": "^0.15.0",
     "underscore.string": "^3.2.3"
