--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "deploy": "gatsby build --prefix-links && gh-pages -d public --silent"
+    "deploy": "gatsby build --prefix-links && ./deploy.sh"
   }
 }
