--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "gatsby develop",
     "build": "gatsby build",
+    "gh-pages": "gh-pages -d public -x",
     "deploy": "gatsby build --prefix-links && ./deploy.sh"
   }
 }
