--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "devDependencies": {
     "ejs": "^2.5.7",
-    "flow-bin": "^0.46.0",
+    "flow-bin": "^0.63.1",
     "gh-pages": "^1.0.0",
     "meow": "^4.0.0",
     "shelljs": "^0.7.8"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
