--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
     "flow-bin": "^0.63.1",
     "gh-pages": "^1.1.0",
     "meow": "^4.0.0",
+    "prettier": "^1.9.2",
     "shelljs": "^0.7.8"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/akameco/blog.git"
   },
   "scripts": {
+    "fmt": "prettier --write \"**/*.{js,json}\"",
     "add-page": "node ./scripts/index.js",
     "nippo": "node ./scripts/nippo.js",
     "dev": "gatsby develop",
